<resources>
    <string name="app_name">FaStMan</string>
    <string name="sync_content_authority">org.clintonhealthaccess.lmis.app.sync</string>
    <string name="sync_account_type">lmis.dhis2nigeria.org.ng</string>
    <string name="app_market_base_url">http://lmisapp.dhis2nigeria.org.ng</string>
    <string name="register_label">Please register with Facility Credentials:</string>
    <string name="losses">Losses</string>
    <string name="adjustments">Adjustments</string>
    <string name="reports">Reports</string>
    <string name="alerts_and_notifications">Alerts &amp; Notifications</string>
    <string name="order">Order</string>
    <string name="receive">Receive</string>
    <string name="dispense">Dispense</string>
    <string name="dispense_no">Dispense No:</string>
    <string name="alerts">Alerts</string>
    <string name="Notifications">Notifications</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_dispense">Dispense</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_receive">Receive</string>
    <string name="title_activity_losses">Losses And Expiries</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_reports">Reports</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_error">Password is required</string>
    <string name="username_error">Username is required</string>
    <string name="message_invalid_login_credential">Invalid Username or Password.</string>
    <string name="message_network_error">Network issue. Please try again later.</string>
    <string name="registration_successful_message">Registration Successful</string>
    <string name="commodity_categories">Commodity by Program</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="close_selection">Close Selection</string>
    <string name="dispense_submit_validation_message_zero">Please make sure all the quantities are greater than 0</string>
    <string name="dispense_submit_validation_message_filled">Please make sure all the quantities are filled</string>
    <string name="dispense_submit_validation_message_errors">Please Enter the correct quantities</string>
    <string name="go_back">Go Back</string>
    <string name="commodity">Commodity</string>
    <string name="adjusted_quantity">Adjusted Quantity</string>
    <string name="quantity_adjusted">Quantity Adjusted</string>
    <string name="new_soh">New SOH</string>
    <string name="quantity">Quantity</string>
    <string name="dispense_to_facility_successful">Dispense to Facility Successful! \nAlerts shall be updated shortly..</string>
    <string name="adjustments_successful">"Adjustments Saved Successfully! \nAlerts shall be updated shortly..</string>
    <string name="dispense_to_successful">Dispense Successful</string>
    <string name="confirm_facility">Confirm Adjustment</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_start_date">Start Date</string>
    <string name="unexpected_order_quantity_error" formatted="false">Expected quantity for %s is (%d). Please give a reason.</string>
    <string name="emergency_order_reason_error" formatted="false">Give a reason for placing Emergency order for %s.</string>
    <string name="prescription">Prescription No:</string>
    <string name="commodityName">Commodity Name</string>
    <string name="srv">SRV :</string>
    <string name="quantity_ordered">Quantity Ordered</string>
    <string name="order_successful">Order Successful</string>
    <string name="orderQuantityMustBeGreaterThanZero">Order quantity must be greater than 0</string>
    <string name="fillInAllOrderItemValues">Please fill in all the fields. Quantities must be greater than zero</string>
    <string name="wastage">Wastage</string>
    <string name="expired">Expired</string>
    <string name="missing">Missing</string>
    <string name="damaged">Damaged</string>
    <string name="totalLossesGreaterThanStockAtHand" formatted="false">Total quantity lost (%d) is greater than stock at hand (%d)</string>
    <string name="fillInSomeLosses">Please enter valid quantities for losses</string>
    <string name="total_losses">Total Losses</string>
    <string name="new_stock_on_hand">New SOH</string>
    <string name="loss_successful">Saving Losses) Successful! \nAlerts shall be updated shortly..</string>
    <string name="allocation_source">LGA/State(CMS) Pick up</string>
    <string name="allocated">Allocated</string>
    <string name="received">Received</string>
    <string name="difference">Difference</string>
    <string name="diff">Diff:</string>
    <string name="error_allocation_id_wrong_format">Enter a valid allocation Id: like %s</string>
    <string name="error_allocation_received">This allocation has already been received.</string>
    <string name="allocation_id">Allocation ID</string>
    <string name="receive_submit_validation_message_allocation_id">Please make sure you have entered a valid Allocation Id</string>
    <string name="receive_quantities_validation_error_message">Please make sure you have entered valid quantities</string>
    <string name="receive_successful">Saving Receive successful! \nAlerts shall be updated shortly..</string>
    <string name="receive_failed">Saving Receive Failed</string>
    <string name="receive_saving">Saving Receive...</string>
    <string name="loss_saving">Saving Loss...</string>
    <string name="order_saving">Saving Order..</string>
    <string name="receive_from_facility">Receive From Facility</string>
    <string name="select_reason">Select Reason ..</string>
    <string name="not_in_stock">Not in Stock</string>
    <string name="help">HELP</string>
    <string name="srv_number">SRV Number</string>
    <string name="url_not_found">Url Not Found</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="alerts_title">ALERTS</string>
    <string name="notifications_title">NOTIFICATIONS</string>
    <string name="current_stock">Current Stock</string>
    <string name="alert_date">Alert Date</string>
    <string name="allocation_number">Allocation Number</string>
    <string name="date_of_allocations">Date of Allocations</string>
    <string name="order_type">Type:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="monthly_stock_count_search_key">Monthly Stock</string>
    <string name="routine_order_alert_day">Routine Order Alert Day</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="order_failed">Order Failed</string>
    <string name="outstanding_routine_order_alerts_message">Outstanding previous orders will be combined with this order</string>
    <string name="graph_title">Stock on Hand</string>
    <string name="adjustment_type_validation_message">Make sure an adjustment type is selected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_facility_stock_report">FacilityStockReportActivity</string>
    <string name="title_activity_rh1">FacilityConsumptionReportRH1Activity</string>
    <string name="title_activity_upgrade">Upgrade</string>
    <string name="title_activity_rh2">FacilityConsumptionReportRH2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="ending_year">Ending Year:</string>
    <string name="starting_month">Starting Month:</string>
    <string name="ending_month">Ending Month:</string>
    <string name="starting_year">Starting Year:</string>
    <string name="physical_count">Physical Count</string>
    <string name="received_from_another_facility">Received from another facility</string>
    <string name="sent_to_another_facilility">Sent to another facility</string>
    <string name="saving_dispense">Saving Dispense...</string>
    <string name="failed_to_save">Failed to Save</string>
    <string name="lga">LGA / State CMS</string>
    <string name="zonal_store">Zonal Cold Chain Store</string>
    <string name="others">Others</string>
    <string name="lga_for_receive">LGA/State Store (allocation id required)</string>
    <string name="zonal_store_for_receive">Vaccine Cold Chain Store</string>
    <string name="others_for_receive">Other Source(no allocation id required)</string>
    <string name="rh2_report_name">Monthly Facility Consumption Report RH2</string>
    <string name="rh1_report_name">Daily Facility Consumption Report</string>
    <string name="rh1_family_planning_report_name">Daily Facility Consumption Report RH1</string>
    <string name="monthly_facility_stock_report_name">"Monthly Facility Stock Report for %s"</string>
    <string name="quantity_received">Quantity Received</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="quantity_dispensed_to_clients">Quantity Dispensed to Clients</string>
    <string name="quantity_dispensed_to_facility">Quantity Dispensed to Facility</string>
    <string name="total_quantity_dispensed">Total Quantity Dispensed</string>
    <string name="quantity_lost">Quantity Lost</string>
    <string name="closing_balance">Closing Balance</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="commodities">Commodities</string>
    <string name="choose_category">Please choose a Category</string>
    <string name="select_commodity">Select a Commodity</string>
    <string name="not_related_to_vaccine">Not related to Vaccine</string>
    <string name="bin_card">Bin Card</string>
    <string name="graph_caption">[for five most frequently dispensed commodities]</string>
    <string name="minimum_stock">Minimum Stock:</string>
    <string name="maximum_stock">Maximum Stock:</string>
    <string name="report_generation_error">There was error while generating the report</string>
    <string name="loading_report">Loading Report...</string>
    <string name="quantity_dispensed">Quantity Dispensed</string>
    <string name="stock_balance">Stock Balance</string>
    <string name="date">Date</string>
    <string name="suggested_quantity">(Suggested Quantity: %d)</string>
    <string name="counted">Counted:</string>
    <string name="load_report">Load Report</string>
    <string name="load_bin_card">Load Bin Card</string>
    <string name="before_start_and_end_date_report_load">Please Select Start Date And End Date.</string>
    <string name="reload_report">Please Tap \'Load Report\' button to Load Report Items.</string>
    <string name="reload_bincard">Please Tap \'Load Bin Card\' button to Load Bin Card Items.</string>
    <string name="before_select_year_and_month_report_load">Please Select Year And Month.</string>
    <string name="before_select_commodity_bin_load">Please Select The Commodity.</string>
    <string name="commodity_bin_card">Commodity Bin-Card</string>
    <string name="stock_on_hand">Stock on Hand:</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing</string>
</resources>