<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="org.clintonhealthaccess.lmis.app.activities.HomeActivity">

    <LinearLayout
        android:layout_weight="2.5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:orientation="vertical">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dispense"
            android:id="@+id/buttonDispense" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_weight="1"
            android:id="@+id/buttonOrder" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive"
            android:layout_weight="1"
            android:id="@+id/buttonReceive" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/losses"
            android:layout_weight="1"
            android:id="@+id/buttonLosses" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjustments"
            android:layout_weight="1"
            android:id="@+id/buttonAdjustments" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            android:layout_weight="1"
            android:id="@+id/buttonReports" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:layout_weight="1"
            android:id="@+id/buttonMessages" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutGraph"
        android:padding="10dp"
        android:orientation="horizontal" />

    <LinearLayout
        android:background="@color/blue"
        android:layout_weight="2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:text="@string/alerts"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewAlerts">

        </ListView>

        <TextView
            android:layout_width="fill_parent"
            android:text="@string/Notifications"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewNotifications">

        </ListView>
    </LinearLayout>
</LinearLayout>
