<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014, Thoughtworks Inc
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~ 2. Redistributions in binary form must reproduce the above copyright notice,
  ~    this list of conditions and the following disclaimer in the documentation
  ~    and/or other materials provided with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~ ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~ ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~ (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
  ~ ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~
  ~ The views and conclusions contained in the software and documentation are those
  ~ of the authors and should not be interpreted as representing official policies,
  ~ either expressed or implied, of the FreeBSD Project.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="@dimen/report_commodity_name_width"
        android:layout_height="wrap_content"
        android:text="@string/commodity"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:textSize="@dimen/item_text_size"/>

    <TextView
        android:layout_width="@dimen/rh2_report_row_width"
        android:layout_height="wrap_content"
        android:text="@string/opening_balance"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:layout_marginLeft="3dp"
        android:textSize="@dimen/item_text_size"/>

    <TextView
        android:layout_width="@dimen/rh2_report_row_width"
        android:layout_height="wrap_content"
        android:text="@string/quantity_received"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:textSize="@dimen/item_text_size"/>

    <TextView
        android:layout_width="@dimen/rh2_report_row_width"
        android:layout_height="wrap_content"
        android:text="@string/quantity_adjusted"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:textSize="@dimen/item_text_size"/>

    <TextView
        android:layout_width="@dimen/rh2_report_row_width"
        android:layout_height="wrap_content"
        android:text="@string/quantity_dispensed"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:textSize="@dimen/item_text_size"/>

    <TextView
        android:layout_width="@dimen/rh2_report_row_width"
        android:layout_height="wrap_content"
        android:text="@string/total_quantity_dispensed"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:textSize="@dimen/item_text_size"/>

    <TextView
        android:layout_width="@dimen/rh2_report_row_width"
        android:layout_height="wrap_content"
        android:text="@string/quantity_lost"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:textSize="@dimen/item_text_size"/>

    <TextView
        android:layout_width="@dimen/rh2_report_row_width"
        android:layout_height="wrap_content"
        android:text="@string/closing_balance"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="3dp"
        android:gravity="center"
        android:textSize="@dimen/item_text_size"/>

</LinearLayout>