<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewCommodityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commodityName"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/imageButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:padding="1dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCommodityName"
        android:layout_toLeftOf="@id/imageButtonCancel"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wastage"
        android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextWastages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/hint_quantity"
            android:inputType="number"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expired"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextExpiries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/hint_quantity"
            android:inputType="number"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextMissing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/hint_quantity"
            android:inputType="number"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damaged"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextDamages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/hint_quantity"
            android:inputType="number"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>