<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    android:background="@color/blue"
    android:padding="@dimen/confirm_items_padding"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/commodityName"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/header_text_size" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/total_losses"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/header_text_size" />


    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/header_text_size"
        android:text="@string/new_stock_on_hand" />

</LinearLayout>