<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@color/blue"
    android:padding="@dimen/confirm_items_padding"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/commodity"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/header_text_size"
        android:id="@+id/textViewHeaderCommodityName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="right"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/header_text_size"
        android:text="@string/adjusted_quantity" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/header_text_size"
        android:id="@+id/textViewHeaderSOH"
        android:text="@string/new_soh" />


</LinearLayout>